# berryscode

./: .gitignore  AUTO_TESTING_LOOP.md  BERRY_API_LSP_INTEGRATION.md  BERRY_CODE_CONTEXT_RAG.md  COMMAND_PATTERN_ARCHITECTURE.md  Cargo.toml  FINAL_CSS_STATUS.md  GOTO_DEFINITION_FINAL_STATUS.md  GOTO_DEFINITION_TEST_GUIDE.md  IMPLEMENTATION_COMPLETE_FINAL.md  JUMP_FIX.md  JUMP_STATUS.md  LICENSE  LSP_FIX_SUMMARY.md  LSP_IMPLEMENTATION_COMPLETE.md  LSP_INITIALIZATION_FIX.md  README.md  SECURITY_AUDIT_REPORT.md  TAILWIND_MIGRATION_COMPLETE.md  TEST_CLEANUP_REPORT.md  TEST_GOTO.md  TROUBLESHOOTING.md  Trunk.toml  WIKI_PANEL_IMPLEMENTATION.md  build.rs  force_rebuild.sh  index.html  run_desktop.sh  run_font_test.sh  tailwind.config.js  test3.txt  test_berrycode_list_files.sh
.cargo/: config.toml
.github/: FUNDING.yml
assets/: tailwind.input.css
berry_api/: Cargo.toml  build.rs
berry_api/src/: lib.rs  llm.rs  server.rs  session.rs
berry_api/src/services/: berry_code_service.rs  lsp_service_impl.rs  mod.rs
berry_api/tests/: test_autonomous_coding.rs  test_autonomous_mode.rs  test_chat_integration.rs  test_ollama_response.rs  test_real_file_read.rs  test_tool_calling.rs
berrycode/: Cargo.toml  build.rs
berrycode/assets/: default_rust_snippets.json  icon.icns
berrycode/proto/: berry_api.proto
berrycode/src/: bevy_plugin.rs  buffer.rs  cursor.rs  egui_app.rs  focus_stack.rs  git.rs  lib.rs  main.rs  search.rs  search_provider.rs  settings.rs  syntax.rs  syntax_test.rs  test_goto_hashmap.rs
berrycode/src/app/: ai_chat.rs  ansi.rs  asset_browser.rs  bevy_templates.rs  cargo_completion.rs  code_actions.rs  custom_snippets.rs  debugger.rs  demo_capture.rs  dock.rs  ecs_inspector.rs  editor.rs  events.rs  file_tree.rs  folding.rs  game_view.rs  git.rs  header.rs  i18n.rs  image_preview.rs  inlay_hints.rs  keymap.rs  live_collab.rs  lsp.rs  macro_expand.rs  minimap.rs  mod.rs  model_preview.rs  new_project.rs  package_manager.rs  peek.rs  plugin_system.rs  preview_3d.rs  remote_dev.rs  rename.rs  run_panel.rs  scene_preview.rs  search.rs  settings.rs  shortcuts.rs  (+9 more)
berrycode/src/app/scene_editor/: animation.rs  animator.rs  animator_editor.rs  asset_deps.rs  asset_import.rs  audio_mixer.rs  bevy_render.rs  bevy_scene_export.rs  bevy_sync.rs  bevy_version.rs  blend_tree_editor.rs  build_settings.rs  code_import.rs  codegen.rs  debug_inspector.rs  dopesheet.rs  event_monitor.rs  gizmo.rs  hierarchy.rs  history.rs  hot_reload.rs  humanoid_avatar.rs  inspector.rs  lightmap.rs  live_sync.rs  material_preview.rs  mod.rs  model.rs  navmesh.rs  particle_preview.rs  physics_sim.rs  play_mode.rs  play_test.rs  plugin_browser.rs  prefab.rs  profiler.rs  query_viz.rs  reflect_codegen.rs  resource_editor.rs  retargeting.rs  (+18 more)
berrycode/src/bevy_ide/: detection.rs  docs.rs  lsp_config.rs  mod.rs  templates.rs
berrycode/src/bevy_ide/assets/: scanner.rs
berrycode/src/bevy_ide/inspector/: brp_client.rs  ecs_state.rs  mod.rs
berrycode/src/bevy_ide/scene_preview/: parser.rs
berrycode/src/common/: events.rs  fuzzy.rs  icons.rs  mod.rs  platform.rs
berrycode/src/native/: dap.rs  fs.rs  git.rs  grpc.rs  lsp.rs  lsp_native.rs  mod.rs  rest_client.rs  slack.rs  terminal.rs  watcher.rs
berrycode/tests/: test_native_lsp.rs
coverage/: berrycode-38805-10355822993277213167_0.profraw  berrycode-38805-10573862011368788183_0.profraw  berrycode-38805-11727441700848547296_0.profraw  berrycode-38805-11935955746440422782_0.profraw  berrycode-38805-12042140314582696960_0.profraw  berrycode-38805-12104082903265162414_0.profraw  berrycode-38805-13672570979469390744_0.profraw  berrycode-38805-14285014995611220295_0.profraw  berrycode-38805-15210410014197086845_0.profraw  berrycode-38805-15372011412357438250_0.profraw  berrycode-38805-15462580917541162449_0.profraw  berrycode-38805-15958052880075228878_0.profraw  berrycode-38805-1690690486022978021_0.profraw  berrycode-38805-18335569351983372689_0.profraw  berrycode-38805-2175042714988450629_0.profraw  berrycode-38805-2300887824362951516_0.profraw  berrycode-38805-2397532774582661897_0.profraw  berrycode-38805-2625657235373217789_0.profraw  berrycode-38805-2741119368338363865_0.profraw  berrycode-38805-4026013163050627927_0.profraw  berrycode-38805-4260149675012367563_0.profraw  berrycode-38805-4471202069748357318_0.profraw  berrycode-38805-4569339023135374972_0.profraw  berrycode-38805-4660579705360391531_0.profraw  berrycode-38805-469591567616707759_0.profraw  berrycode-38805-49052299463034496_0.profraw  berrycode-38805-5251965761773393342_0.profraw  berrycode-38805-7902121486732215042_0.profraw  berrycode-38805-8181233608755674595_0.profraw  berrycode-38805-8667116119033746686_0.profraw  berrycode-38805-9164600489892366363_0.profraw  berrycode-38805-9778603981072876102_0.profraw  berrycode-38825-10355822993277213167_0.profraw  berrycode-38825-10573862011368788183_0.profraw  berrycode-38825-11727441700848547296_0.profraw  berrycode-38825-11935955746440422782_0.profraw  berrycode-38825-12042140314582696960_0.profraw  berrycode-38825-12104082903265162414_0.profraw  berrycode-38825-13672570979469390744_0.profraw  berrycode-38825-14285014995611220295_0.profraw  (+24 more)
docs/: components.md  features.html  funding_checklist.md  funding_priority.md  index.html  wcag-contrast-audit.md
flatpak/: com.berrycode.BerryCode.yml
proto/: berry_api.proto  lsp_service.proto
scenes/: scene.bscene
scripts/: build-release.ps1  build-release.sh
snap/: snapcraft.yaml
src/: accessibility.rs  berrycode_panel.rs  buffer.rs  command_palette.rs  completion_widget.rs  components_tauri.rs  css_classes.rs  cursor.rs  database_panel.rs  diagnostics_panel.rs  editor.rs  editor_lsp.rs  egui_app.rs  egui_app_slack.rs  file_tree_tauri.rs  focus_stack.rs  git.rs  hover_tooltip.rs  lib.rs  lsp.rs  lsp_ui.rs  main.rs  search.rs  search_dialog.rs  search_panel.rs  search_provider.rs  settings.rs  syntax.rs  syntax_worker.rs  tauri_bindings.rs  tauri_bindings_berrycode.rs  terminal_panel.rs  test_stdlib.rs  (+2 more)
src-tauri/: AUTO_TASK_DETECTION.md  Cargo.toml  build.rs  tauri.conf.json
(+96 files in other folders)
