[workspace]
members = [
    "berrycode",
    "berry_api"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["BerryCode Team"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 1

[workspace.dependencies]
tower-lsp = "0.5"
serde = { version = "1.0", features = ["derive"] }