[package]
name = "berrycode"
version = "0.3.1"
edition = "2021"
description = "The IDE built for the Bevy game engine — Scene Editor, ECS Inspector, and more"
authors = ["BerryCode Team"]
license = "MIT"
repository = "https://github.com/KyosukeIshizu1008/berryscode"
homepage = "https://github.com/KyosukeIshizu1008/berryscode"

# Binaries
[[bin]]
name = "berrycode"
path = "src/main.rs"

[[bin]]
name = "berrycode-egui"
path = "src/bin/berrycode-egui.rs"

[dependencies]
# ===== Bevy + bevy_egui (Native Game Engine + Immediate Mode UI) =====
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr",
    "bevy_asset", "bevy_scene", "bevy_gltf", "bevy_remote", "bevy_text",
    "png",
    "default_font", "tonemapping_luts", "x11", "wayland",
    "bevy_audio", "vorbis", "wav"
] }
bevy_egui = "0.32"
egui = "0.30"
ron = "0.8"

# ===== Text Editing Core =====
ropey = "1.6"
unicode-segmentation = "1.11"
unicode-width = "0.1"

# ===== File System & I/O =====
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
notify = "7.0"
ignore = "0.4"
glob = "0.3"
memmap2 = "0.9"  # Memory-mapped I/O for large files

# ===== Git Integration =====
git2 = "0.19"
openssl = { version = "0.10", optional = true, features = ["vendored"] }

# ===== Search & Replace =====
regex = "1.10"
rayon = "1.10"  # Parallel processing

# ===== Terminal (PTY + VT100) =====
portable-pty = "0.8"
vte = "0.13"

# ===== Syntax Highlighting =====
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# ===== Serialization =====
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ===== HTTP Client (for BRP) =====
reqwest = { version = "0.12", features = ["json"] }

# ===== Window Icon =====
winit = "0.30"

# ===== Utilities =====
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
indexmap = "2.0"
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5.0"
tempfile = "3.8"
lazy_static = "1.4"
urlencoding = "2.1"
base64 = "0.22"

# ===== Image Preview (PNG, JPEG, GIF, WebP, BMP, ICO, SVG) =====
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
resvg = "0.44"

# ===== 3D Model Preview (GLTF/GLB, OBJ, STL, PLY) =====
gltf = "1.4"
tobj = "4.0"       # OBJ parser

# ===== Clipboard =====
arboard = "3.4"

# ===== Native File Dialogs (cross-platform) =====
rfd = "0.15"

# ===== Platform Info =====
whoami = "1.5"

# ===== Native LSP Client =====
lsp-types = "0.95"

[features]
default = []
vendored-openssl = ["openssl"]

# ═══════════════════════════════════════════════════════════
# App bundling configuration (cargo-bundle / cargo-packager)
# ═══════════════════════════════════════════════════════════

[package.metadata.bundle]
name = "BerryCode"
identifier = "com.berrycode.editor"
icon = [
    "assets/icon_256.png",
    "assets/icon.icns",
    "assets/icon.ico",
]
category = "public.app-category.developer-tools"
short_description = "Bevy Game Engine IDE — Unity-class Scene Editor"
long_description = """
BerryCode is a 100% Rust native IDE built on Bevy + bevy_egui + WGPU.
Features: code editor, Git panel, terminal, Scene Editor with 3D viewport,
animation system, visual scripting, shader graphs, and AI chat.
"""
copyright = "Copyright (c) 2026 BerryCode Team"
osx_minimum_system_version = "11.0"
osx_frameworks = []

# Linux .deb configuration
[package.metadata.bundle.deb]
depends = ["libx11-6", "libxkbcommon0", "libasound2", "libssl3"]
section = "devel"

# Windows configuration
[package.metadata.bundle.windows]
wix = false
